--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16,3 +16,18 @@ html {
 	font-family: 'Oswald', sans-serif;
 	color:black;
 }
+footer{
+
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 40px;
+
+}
+
+.required:after{
+	color: #d00;
+   content: "*";
+   font-size: 20px;
+
+}
