--- a/templates/query_tmc/index.html
+++ b/templates/query_tmc/index.html
@@ -113,6 +113,15 @@
                     {% endif %}
             </table>
         </div>
+        <div>
+            {% if data.error_response %}
+
+            <h4 class="text-center">
+                Error en la petici&oacute;n, Intente m&aacute;s tarde.
+            </h4>
+    
+            {% endif %}
+        </div>
     </div>
 </div>
 {% endblock content %}
