--- a/templates/query_tmc/index.html
+++ b/templates/query_tmc/index.html
@@ -117,7 +117,7 @@
             {% if data.error_response %}
 
             <h4 class="text-center">
-                Error en la petici&oacute;n, Intente m&aacute;s tarde.
+                No hay datos disponibles para los parametros ingresados
             </h4>
     
             {% endif %}
